test/functional/should-fail/jfxc1875a.fx
import java.lang.System;
/*
 * JFXC-1875 public-init variable is boundable from outside the script
 *
 * @subtest
 *
 */

package class jfxc1875a{
  public-init var months=["January","February","August","September"]; // public-init variable
}